# clint-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
docs/: openapi.json
docs/endpoints/: delete_v1-contacts-id-tags.md  delete_v1-deals-id.md  get_v1-account-fields.md  get_v1-contacts-id-attachments.md  get_v1-contacts.md  get_v1-deals.md  get_v1-groups-id.md  get_v1-lost-status.md  get_v1-origins.md  get_v1-tags-id.md  get_v1-tags.md  get_v1-users-id.md  get_v1-users.md  get_v2-channel-accounts.md  get_v2-chats-contact-contactid.md  get_v2-dashboards-id.md  get_v2-dashboards.md  get_v2-message-templates-id.md  get_v2-message-templates.md  get_v2-messages-id.md  post_v1-contacts-id-tags.md  post_v1-contacts.md  post_v1-deals-id.md  post_v1-tags.md  post_v2-messages-image.md  post_v2-messages-template.md  post_v2-messages-text.md
scripts/: eval-cases.json  eval-results.json  judge.py  personas-infoprodutor.json  prompts-persona-A.json  prompts-persona-B.json  prompts-persona-C.json  smoke_test.py  smoke_write.py
specs/: app-candidates.md  fastmcp-apps-research.md
specs/endpoints/: delete_v1-contacts-id.md  delete_v1-tags-id.md  get_v1-contacts-id.md  get_v1-deals-id.md  get_v1-groups.md  get_v1-lost-status-id.md  get_v1-organizations-id.md  get_v1-origins-id.md  get_v2-channel-accounts-id.md  get_v2-charts-id-data.md  get_v2-chats-channel-account-channelaccountid.md  get_v2-chats-id.md  get_v2-dashboards-id-data.md  get_v2-messages-chat-chatid.md  post_v1-contacts-id.md  post_v1-deals.md  post_v1-organizations-id.md  (+2 more)
tests/: report.md
(+26 files in other folders)
